<resources>

    <string name="app_name">
        Conversor de Arquivos
    </string>

    <string name="menu">
        Menu
    </string>

    <string name="voltar">
        Voltar
    </string>

    <string name="sobre_info">
        Conversor de Arquivos v1.0
    </string>

    <string name="selecione_arq">
        Selecione arquivo
    </string>

    <string name="nenhum_arq">
        Nenhum arquivo selecionado
    </string>

    <string name="confirma_arq">
        Arquivo selecionado!
    </string>

    <string name="btn_converter">
        Converter
    </string>

    <string name="convertendo">
        Convertendo arquivo
    </string>

    <string name="nao_arq">
        Escolha arquivo primeiro!
    </string>

    <string name="arq_convertido">
        Arquivo convertido com sucesso!
    </string>

    <string name="erro">
        Erro ao converter
    </string>

    <string name="prefixo_arq">
        imagem_convertida
    </string>

    <string name="arquivo_salvo">
        Salvo em: %1$s
    </string>

    <string name="ja_png">
        Arquivo já está em PNG
    </string>

    <string name="ja_jpeg">
        Arquivo já está em JPEG
    </string>

    <string name="ja_webp">
        Arquivo já está em WEBP
    </string>

    <string name="f_invalido">
        Formato inválido!
    </string>

    <string name="hist">
        Histórico
    </string>

    <string name="limpa_hist">
        Limpar Histórico
    </string>

    <string name="hist_limpo">
        Histórico limpo!
    </string>

    <string name="sobre">
        Sobre
    </string>

    <string name="teste">
        teste
    </string>
</resources>