<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/verydark_gray">

    <ImageButton
        android:id="@+id/btnMenu"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="2dp"
        android:background="@android:color/transparent"
        android:src="@drawable/menu_24dp"
        android:contentDescription="@string/menu"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="0dp"
            android:text="@string/app_name"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/dark_gray">

                <TextView
                    android:id="@+id/txtArquivo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/nenhum_arq"
                    android:textColor="@color/white"/>

                <ImageView
                    android:id="@+id/imgPreview"
                    android:contentDescription="@string/teste"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_marginTop="16dp"
                    android:layout_gravity="center_horizontal"
                    android:scaleType="centerCrop"/>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <Button
            android:id="@+id/btnEscolher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/selecione_arq"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/dark_gray"/>

        <Spinner
            android:id="@+id/spinnerFormato"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="@color/dark_gray"/>

        <Button
            android:id="@+id/btnConverter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/btn_converter"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/dark_gray"/>

    </LinearLayout>

</LinearLayout>



